--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "QuickJot",
+  "name": "Jobber",
   "version": "1.0.0",
-  "description": "App to create video ideas",
+  "description": "App to track job apps",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +9,7 @@
   "author": "Brian Lin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.8.11"
